# 3DScanning

./: .gitignore  README.md
Exercise1/: CMakeLists.txt  README.md  VirtualSensor.h  main.cpp
Exercise2/: .gitignore  CMakeLists.txt  ImplicitSurface.h  MarchingCubes.h  README.md  Volume.h  main.cpp
Exercise3/: .gitignore  CMakeLists.txt  ICPOptimizer.h  ProcrustesAligner.h  README.md  SimpleMesh.h  main.cpp
Exercise3/data/bunny/: bunny.off
Exercise4/: CMakeLists.txt  README.md  World.h  main.cpp
Project/: .gitignore  CMakeLists.txt  README.md  Tracker.cpp  Tracker.h  main.cpp  sessionSetupExamplehex.txt
Project/Blender/: demoscene5.blend
Project/CppDellDemo/: Assembly-CSharp.csproj  CppDellDemo.csproj  CppDellDemo.sln  readme.txt
Project/CppDellDemo/Assets/: Scene.unity  demo.unity  dllInteract.cs
Project/CppDellDemo/Assets/Plugins/: Exercise 4.exp  Exercise 4.ipdb  Exercise 4.lib  UnityDLL.ipdb  libtracker.dylib
Project/CppDellDemo/ProjectSettings/: ProjectSettings.asset
Project/FinalBuild/Mono/MarkerlessAR_Unity_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level0.resS  level1  level2  sharedassets0.assets  sharedassets0.assets.resS  sharedassets1.assets  sharedassets2.assets
Project/MarkerlessAR_Unity/: .gitignore  MarkerlessAR_Unity.sln
Project/MarkerlessAR_Unity/Assets/Character_Cactus/: Cactus_demo.controller
Project/MarkerlessAR_Unity/Assets/Materials/: SpriteErrorTex.mat  blue.mat  blue_t.mat  default.mat  depthShader.mat  frameMeshMat.mat  frameMeshOpaque.mat  frameMeshWireframe.mat  green.mat  placeObjectGhostMat.mat  placeObjectMat.mat  splatMaterial.mat
Project/MarkerlessAR_Unity/Assets/Mesh/: demoscene5.blend  demoscene5.fbx  demoscene5.joined.fbx
Project/MarkerlessAR_Unity/Assets/Plugins/: tracker.bundle
Project/MarkerlessAR_Unity/Assets/Prefabs/: Cactus Variant.prefab  FlameSpawnerPrefab.prefab  FrameMeshPrefab.prefab  PaintBallPrefab.prefab  PlaceObjectPrefab.prefab  SolidBallPrefab.prefab  SplatPrefab.prefab
Project/MarkerlessAR_Unity/Assets/Scenes/: BasicPhysics.unity  MainScene.unity  Menu.unity  OfflineReconstruction.unity  SuperAwesomeComplexSceneWithLotsOfInteractionAndPhysicsAndStuff.unity  TestPose.unity
Project/MarkerlessAR_Unity/Assets/Scripts/: CameraSettings.cs  DeleteOnSceneExit.cs  DepthCamera.cs  Helpers.cs  Marshaling.cs  OfflineReconstructor.cs  PaintBallScript.cs  ProcessingEffect.cs  Reconstructor.cs  SwitchCamera.cs  SystemParams.cs  TestPose.cs  UserInputHandler.cs  WOzReconstructor.cs  dllInteract.cs
Project/MarkerlessAR_Unity/Assets/Shaders/: DepthShader.shader
Project/MarkerlessAR_Unity/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Project/Sensor/Sensor/: .gitignore
Project/Sensor/Sensor/Debug/: Sensor.ilk
Project/Sensor/Sensor/Scripts/: readData.py
Project/Sensor/Sensor/Sensor/: Sensor.vcxproj  main.cpp
Project/Tracker/: .gitignore  CMakeLists.txt  Context.h  Cpp14Workaround.h  DatasetVideoStreamReader.cpp  DatasetVideoStreamReader.h  ExportDLL.cpp  ExportDLL.h  ICP.cpp  ICP.h  ICPOptimizer.h  NearestNeighbor.h  README.md  Tracker.cpp  Tracker.h  TrackerContext.h  TrackerExports.h  VideoStreamReader.h  XtionStreamReader.cpp  XtionStreamReader.h  main.cpp
Project/Tracker/Final-Tracker/: .gitignore  Tracker.sln
Project/Tracker/Final-Tracker/ICP/: ICP.vcxproj  ICP.vcxproj.filters  main.cpp
Project/Tracker/Final-Tracker/Sensor/: .gitignore  OpenNIConfig.xml  Sensor.vcxproj  Sensor.vcxproj.filters  main.cpp
Project/Tracker/Final-Tracker/Tests/: Tests.vcxproj  unittest1.cpp
Project/Tracker/Final-Tracker/Tracker/: CameraParameters.h  Tracker.vcxproj  Tracker.vcxproj.filters  cameraPoseTest.cpp  cameraPoseTest.h  meshTest.cpp  reconstructionTest.cpp  vidReadTest.cpp
Project/Tracker/Projects/: Tracker.sln  Tracker.sln.DotSettings
Project/Tracker/Projects/Tests/: Tests.vcxproj
Project/Tracker/Projects/Tracker/: Tracker.vcxproj  Tracker.vcxproj.filters
Project/Tracker/Src/: TrackerContext.h
Project/Tracker/Tests/: WindowsTests.cpp  WindowsTests.h
Project/Tracker/Tracker/: .gitignore
Project/Tracker/Tracker/Sensor/: DatasetVideoStreamReader.cpp  DatasetVideoStreamReader.h  Sensor.vcxproj  Sensor.vcxproj.filters  VideoStreamReaderBase.h  XtionStreamReader.cpp  XtionStreamReader.h  main.cpp
Project/Tracker/data-stream/headers/: Context.h  DatasetVideoStreamReader.h  VideoStreamReaderBase.h
Project/Tracker/data-stream/source/: DatasetVideoStreamReader.cpp
Project/Tracker/dataStream/headers/: DatasetVideoStreamReader.h  VideoStreamReaderBase.h
Project/Tracker/dataStream/source/: DatasetVideoStreamReader.cpp
Project/Tracker/lib/: tracker.exp  tracker.lib
Project/Tracker/reconstruction/headers/: Fusion.h  ICP.h  Tracker.h
Project/Tracker/reconstruction/source/: Fusion.cpp  ICP.cpp  NearestNeighbor.hpp  PointCloud.hpp  SimpleMesh.hpp  Tracker.cpp
Project/Tracker/reconstruction/src/: Tracker.cpp
Project/Tracker/shaders/: CS_FUSION.hlsl  Fusion.hlsl  Fusion.hlsli  MarchingCubes.hlsl
Project/Tracker/shaders/precompiled/: CS_ATTACH_DUMMY.h  CS_FUSION.h  CS_MC.h
Project/Tracker/src/: ExportDLL.cpp  ExportDLL.cpp.orig  ExportDLL.h  Kernel.cu  TrackerContext.cpp  TrackerContext.h  main.cpp
Project/Tracker/src/helpers/: Transformations.h
Project/Tracker/tracker-test/: tracker-test
Project/patrick_e3/: ICPOptimizer.h  PointCloud.h  ProcrustesAligner.h  main.cpp
Project/uplink-master/examples/: example-desktop-server.cpp
Project/uplink-master/headers/: desktop-ui.hpp  endpoints.hpp  message.hpp  servers.h  sessions-setup.h  sessions-setup.hpp
Project/uplink-master/projects/: SniffedSettings.h  UplinkServer.cpp  uplink-vs2013-example-server.vcxproj
Project/uplink-master/scripts/: build-cmake-nmake.cmd  build-cmake-vs2012.cmd  build-cmake-vs2013.cmd
Project/uplinkBF/: StructureSensor.cpp  StructureSensor.h  UplinkBF.sln  UplinkBF.vcxproj  UplinkBF.vcxproj.filters  UplinkServer.cpp
Project/uplinkBF/Debug/: vc141.idb
Project/uplinkBF/Uplink/: endpoints.hpp
(+242 files in other folders)
